# EditTools

./: Voice  main.py  prompts.py  pyproject.toml  testwhisper.py  text.py
EditTools/: __init__.py  prompts.py
EditTools/GenAPI/: GenAPI.py
EditTools/ImageEdit/: __init__.py  edit.py
EditTools/VideoEdit/: __init__.py  subt.py  video.py
GenAPI/: __init__.py
ImageEdit/: __init__.py  edit.py
VideoEdit/: __init__.py  subt.py  video.py
