[project]
name = "EditTools"
version = "0.2.6"
description = "Paquete auxiliar de EditTools"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "moviepy>=2.1.2",
    "mysqlclient",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["EditTools"]